--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "netflix",
   "version": "0.1.0",
+  "homepage": "https://devintel-byte.github.io/netflix_deploy_gh",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.10",
     "fuse.js": "^6.5.3",
     "node-modules": "^1.0.1",
@@ -14,10 +12,11 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
