--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "netflix",
   "version": "0.1.0",
-  "homepage": "https://devintel-byte.github.io/netflix-clone",
+  "homepage": "https://devintel-byte.github.io/netflix_deploy_gh",
   "private": true,
   "dependencies": {
     "firebase": "^9.6.10",
@@ -39,7 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
-  }
+  "devDependencies": {}
 }
