--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "netflix",
   "version": "0.1.0",
-  "homepage": "https://devintel-byte.github.io/netflix_deploy_gh",
   "private": true,
   "dependencies": {
     "firebase": "^9.6.10",
@@ -15,8 +14,6 @@
     "styled-components": "^5.3.3"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,7 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
-  }
+  "devDependencies": {}
 }
